--- a/boards/Kconfig
+++ b/boards/Kconfig
@@ -814,6 +814,15 @@ config ARCH_BOARD_LAUNCHXL_TMS57004
 		TI Hercules TMS570LS04x/03x LaunchPad Evaluation Kit (LAUNCHXL-
 		TMS57004) featuring the Hercules TMS570LS0432PZ chip.
 
+config ARCH_BOARD_LICHEERV_NANO_C906B
+	bool "Sipeed LicheeRV_Nano_C906B"
+	depends on ARCH_CHIP_SG2002
+	select ARCH_HAVE_LEDS
+	---help---
+		Sipeed LicheeRV_Nano board featuring the SG2002 SoC.
+		SG2002 features the THEAD RISC-V C906B core.
+
+
 config ARCH_BOARD_LM3S6432S2E
 	bool "Stellaris RDK-S2E Reference Design Kit"
 	depends on ARCH_CHIP_LM3S6432
@@ -3223,6 +3232,7 @@ config ARCH_BOARD
 	default "launchxl-cc1312r1"         if ARCH_BOARD_LAUNCHXL_CC1312R1
 	default "launchxl-tms57004"         if ARCH_BOARD_LAUNCHXL_TMS57004
 	default "lc823450-xgevk"            if ARCH_BOARD_LC823450_XGEVK
+	default "licheerv_nano_c906b"       if ARCH_BOARD_LICHEERV_NANO_C906B
 	default "lincoln60"                 if ARCH_BOARD_LINCOLN60
 	default "lm3s6432-s2e"              if ARCH_BOARD_LM3S6432S2E
 	default "lm3s6965-ek"               if ARCH_BOARD_LM3S6965EK
@@ -4295,6 +4305,9 @@ source "boards/risc-v/esp32c3-legacy/esp32c3-devkit-rust-1/Kconfig"
 endif
 if ARCH_BOARD_ESP32C3_GENERIC
 source "boards/risc-v/esp32c3/esp32c3-generic/Kconfig"
+endif
+if ARCH_BOARD_LICHEERV_NANO_C906B
+source "boards/risc-v/sg2002/licheerv_nano_c906b/Kconfig"
 endif
 if ARCH_BOARD_ESP32S2_KALUGA_1
 source "boards/xtensa/esp32s2/esp32s2-kaluga-1/Kconfig"
